<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:ignore="ContentDescription"
    android:clickable="true"
    android:focusable="true"
    android:background="@color/white"
    android:padding="@dimen/space_normal"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        tools:ignore="ContentDescription"
        android:background="@color/white"
        android:padding="@dimen/space_normal"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="@dimen/size_large"
                android:layout_gravity="center"
                android:foregroundGravity="center"
                android:layout_weight="3"
                android:src="@drawable/kshwlogo"/>


            <ImageView
                android:id="@+id/imgSpeech"
                android:layout_width="@dimen/size_large"
                android:layout_height="@dimen/size_large"
                android:layout_gravity="end"
                android:padding="@dimen/space_normal"
                android:foregroundGravity="right"
                android:layout_weight="0"
                android:tint="@color/colorPrimary"
                android:src="@drawable/ic_mic_black"/>

            <ImageView
                android:id="@+id/imgHome"
                android:padding="@dimen/space_normal"
                android:layout_width="@dimen/size_large"
                android:layout_height="@dimen/size_large"
                android:layout_gravity="end"
                android:foregroundGravity="right"
                android:layout_weight="0"
                android:src="@drawable/home"/>

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="500dp"
            android:gravity="center"
            android:layout_marginTop="100dp"
            android:orientation="horizontal">

            <android.support.v7.widget.CardView
                android:id="@+id/cvSing"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/space_small"
                android:layout_weight="1"
                app:cardUseCompatPadding="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="@dimen/menu_img_width"
                        android:layout_height="@dimen/menu_img_height"
                        android:src="@drawable/sing" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:layout_marginTop="@dimen/space_small"
                        android:background="@drawable/roundbutton"
                        android:gravity="center"
                        android:padding="@dimen/space_normal"
                        android:text="@string/sing"
                        android:textColor="@color/Black"
                        android:textSize="@dimen/text_title" />


                </LinearLayout>


            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/cvStory"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/space_small"
                android:layout_weight="1"
                app:cardUseCompatPadding="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="@dimen/menu_img_width"
                        android:layout_height="@dimen/menu_img_height"
                        android:src="@drawable/story" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:layout_marginTop="@dimen/space_small"
                        android:background="@drawable/roundbutton"
                        android:gravity="center"
                        android:padding="@dimen/space_normal"
                        android:text="@string/story"
                        android:textColor="@color/Black"
                        android:textSize="@dimen/text_title" />


                </LinearLayout>


            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/cvDance"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/space_small"
                android:layout_weight="1"
                app:cardUseCompatPadding="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="@dimen/menu_img_width"
                        android:layout_height="@dimen/menu_img_height"
                        android:src="@drawable/dance" />

                    <TextView
                        android:id="@+id/tvDance"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:layout_marginTop="@dimen/space_small"
                        android:background="@drawable/roundbutton"
                        android:gravity="center"
                        android:padding="@dimen/space_normal"
                        android:text="@string/dance_start"
                        android:textColor="@color/Black"
                        android:textSize="@dimen/text_title" />
                </LinearLayout>
            </android.support.v7.widget.CardView>
        </LinearLayout>

    </LinearLayout>
    <FrameLayout
        android:id="@+id/fragmentView"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</android.support.design.widget.CoordinatorLayout>